DONE: fix Map z-index

--- a/WIS/css/StyleSearchBar.css
+++ b/WIS/css/StyleSearchBar.css
@@ -155,7 +155,7 @@
     width: 100%;
     position: absolute;
     background-color: lightgrey;
-    z-index: 1;
+    z-index: 999;
 }
 
 .search-dropdown-content a {
